EWL-8010: Adding fix for border featured stories on mobile.

--- a/styleguide/source/assets/scss/02-molecules/_article-stub.scss
+++ b/styleguide/source/assets/scss/02-molecules/_article-stub.scss
@@ -173,24 +173,8 @@
 
 .ama__page--news__teasers {
   padding-top: 18px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    height: 4px;
-    background-color: $purple;
-    left: 0;
-    right: 0;
-  }
-
-  @include breakpoint($bp-small) {
-    border-top: 4px solid $purple;
-
-    &:before {
-      content: initial;
-    }
-  }
-
+  border-top: 4px solid $purple;
+  
   &-heading {
     font-size: 26px;
     line-height: 1;
